@@ -3,6 +3,7 @@
   * color palette revamp (see https://github.com/lemmon/abrusco/blob/master/variables.css)
   * (color,background) accents hover states
   * (color,background) sat, lum, alpha hover states
+  * (border) border-style
 
 # 0.21.0 (2022-08-25)
 
